{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "be30a437-9373-456e-9bb7-7f7e50b25be2",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "c4a67aef-fc49-4645-99a4-32321287d784",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PointerClicked",
                    "type": "Button",
                    "id": "66ea232e-a79b-4417-9e7c-418e6d73cfa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c00fc4e-99e3-4293-a97d-776fb70bf712",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db7479e2-8490-43b6-a602-a6d4dd5d60ac",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f85c7e46-f11f-4dcc-9084-414b5e1dc474",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0b3bb05-c2d6-4057-91e0-28c473fb575f",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shooting",
            "id": "eca2edab-12f2-4c31-be7d-d96be000e030",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "c582984b-83ff-42d0-ae31-25f1534287e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "684c6902-88c9-4c1c-9722-13ff6e4a3ba4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d856e95f-267a-4d9b-8b3a-f68ee1090336",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}